- Updating examples to uses embedder, API, and settings file
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1423 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/api.html
+++ b/fl5/js/test/examples/api.html
@@ -4,6 +4,8 @@
         <title>API</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>API</h1>
@@ -30,8 +32,8 @@
 			<a href="#" onclick="callPlayerFunction('properties');return false;">Get Value</a>
         </div>
         <script type="text/javascript">
-            var player = new jwplayer.html5(document.getElementById("player"));
-            player = player.setup({
+            jwplayer("player").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
