--- a/fl5/js/test/examples/custom_skin.html
+++ b/fl5/js/test/examples/custom_skin.html
@@ -4,6 +4,8 @@
         <title>Custom skin</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>Custom Player Skin</h1>
@@ -17,8 +19,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var beelden = new jwplayer.html5(document.getElementById("beelden"));
-            beelden.setup({
+            jwplayer("beelden").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -35,8 +37,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var bekle = new jwplayer.html5(document.getElementById("bekle"));
-            bekle.setup({
+            jwplayer("bekle").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -53,8 +55,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var classic = new jwplayer.html5(document.getElementById("classic"));
-            classic.setup({
+            jwplayer("classic").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -71,8 +73,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var five = new jwplayer.html5(document.getElementById("five"));
-            five.setup({
+            jwplayer("five").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -89,8 +91,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var glow = new jwplayer.html5(document.getElementById("glow"));
-            glow.setup({
+            jwplayer("glow").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -107,8 +109,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var grungetape = new jwplayer.html5(document.getElementById("grungetape"));
-            grungetape.setup({
+            jwplayer("grungetape").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -125,8 +127,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var icecreamsneaka = new jwplayer.html5(document.getElementById("icecreamsneaka"));
-            icecreamsneaka.setup({
+            jwplayer("icecreamsneaka").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -143,8 +145,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var kleur = new jwplayer.html5(document.getElementById("kleur"));
-            kleur.setup({
+            jwplayer("kleur").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -161,8 +163,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var lulu = new jwplayer.html5(document.getElementById("lulu"));
-            lulu.setup({
+            jwplayer("lulu").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -179,8 +181,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var modieus = new jwplayer.html5(document.getElementById("modieus"));
-            modieus.setup({
+            jwplayer("modieus").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -197,8 +199,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var nacht = new jwplayer.html5(document.getElementById("nacht"));
-            nacht.setup({
+            jwplayer("nacht").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -215,8 +217,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var playcasso = new jwplayer.html5(document.getElementById("playcasso"));
-            playcasso.setup({
+            jwplayer("playcasso").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -233,8 +235,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var schoon = new jwplayer.html5(document.getElementById("schoon"));
-            schoon.setup({
+            jwplayer("schoon").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -251,8 +253,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var snel = new jwplayer.html5(document.getElementById("snel"));
-            snel.setup({
+            jwplayer("snel").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -269,8 +271,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var stijl = new jwplayer.html5(document.getElementById("stijl"));
-            stijl.setup({
+            jwplayer("stijl").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -287,8 +289,8 @@
             HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var stormtrooper = new jwplayer.html5(document.getElementById("stormtrooper"));
-            stormtrooper.setup({
+            jwplayer("stormtrooper").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
