--- a/fl5/js/test/examples/multiple_customs.html
+++ b/fl5/js/test/examples/multiple_customs.html
@@ -4,6 +4,8 @@
         <title>Multiple custom players</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>Multiple custom players</h1>
@@ -21,8 +23,8 @@
         	HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var player1 = new jwplayer.html5(document.getElementById("player1"));
-            player1.setup({
+            jwplayer("player1").setup({
+            	players: settings.players,
             	autostart: true,
             	mute: true,
             	repeat: "single",
@@ -44,8 +46,8 @@
         	HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var player2 = new jwplayer.html5(document.getElementById("player2"));
-            player2.setup({
+            jwplayer("player2").setup({
+            	players: settings.players,
             	height: 260,
             	width: 500,
             	screencolor: "00bee0",
