--- a/fl5/js/test/examples/nodoctype.html
+++ b/fl5/js/test/examples/nodoctype.html
@@ -3,6 +3,8 @@
         <title>No document type</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>No document type</h1>
@@ -13,8 +15,8 @@
         	HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var player = new jwplayer.html5(document.getElementById("player"));
-            player.setup({
+            jwplayer("player").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
