--- a/fl5/js/test/examples/nofile.html
+++ b/fl5/js/test/examples/nofile.html
@@ -4,6 +4,8 @@
         <title>No file path</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>No file path</h1>
@@ -17,8 +19,12 @@
         	 HTML5 Player should replace this.
         </div>
         <script type="text/javascript">
-            var player = new jwplayer.html5(document.getElementById("player"));
-            player.setup({});
+            jwplayer("player").setup({
+            	players: settings.players,
+				players: [{
+            		type: "html5"
+            	}]
+			});
         </script>
         <h3>HTML code</h3>
     </body>
