--- a/fl5/js/test/examples/single_mp4.html
+++ b/fl5/js/test/examples/single_mp4.html
@@ -4,6 +4,8 @@
         <title>Single MP4 Example</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>Single MP4 video</h1>
@@ -14,8 +16,8 @@
         	HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var player = new jwplayer.html5(document.getElementById("player"));
-            player.setup({
+            jwplayer("player").setup({
+            	players: settings.players,
             	file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             });
