--- a/fl5/js/test/examples/videotag.html
+++ b/fl5/js/test/examples/videotag.html
@@ -4,6 +4,8 @@
         <title>Video Tag</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>Video Tag</h1>
