--- a/fl5/js/test/examples/badfile.html
+++ b/fl5/js/test/examples/badfile.html
@@ -4,6 +4,8 @@
         <title>Invalid file path</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>Invalid file path</h1>
@@ -17,8 +19,8 @@
         	 HTML5 Player should replace this.
         </div>
         <script type="text/javascript">
-            var player = new jwplayer.html5(document.getElementById("player"));
-            player.setup({
+            jwplayer("player").setup({
+            	players: settings.players,
             	levels: [{
             		file: "../../../js/test/files/bunny1.mp4"
             	}, {
