--- a/fl5/js/test/examples/extensions.html
+++ b/fl5/js/test/examples/extensions.html
@@ -4,6 +4,8 @@
         <title>File extensions with query params (access keys)</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>File extensions with query params (access keys)</h1>
@@ -18,6 +20,7 @@
         </video>
         <script type="text/javascript">
             jwplayer("player").setup({
+            	players: settings.players,
             	players: [{
             		type: "html5"
             	}]
