--- a/fl5/js/test/examples/filepathsroot.html
+++ b/fl5/js/test/examples/filepathsroot.html
@@ -4,6 +4,8 @@
         <title>Root file paths</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>Root file paths</h1>
@@ -27,6 +29,7 @@
         <script type="text/javascript">
             setTimeout(function() {
             	jwplayer("player").setup({
+            	players: settings.players,
             		players: [{
             			type: "html5"
             		}, {
