--- a/fl5/js/test/examples/libraries/yui.html
+++ b/fl5/js/test/examples/libraries/yui.html
@@ -4,6 +4,8 @@
         <title>YUI Library</title>
         <script type="text/javascript" src="../../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="../settings.js">
+        </script>
         <script src="https://www.google.com/jsapi?key=ABQIAAAAmW4wY4GLARKwRKxx1EY4dxTCwYuWkdD_iTnqF3uxU7_DebvfxBREab8CD-MRcuvG-IzP2uSZrQpweg" type="text/javascript">
         </script>
         <script language="Javascript" type="text/javascript">
@@ -23,6 +25,7 @@
         </video>
         <script type="text/javascript">
             jwplayer("player").setup({
+            	players: settings.players,
             	players: [{
             		type: "html5"
             	}, {
