--- a/fl5/js/test/examples/mp4_ogg.html
+++ b/fl5/js/test/examples/mp4_ogg.html
@@ -4,6 +4,8 @@
         <title>Multiple sources</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>MP4 plus OGG video</h1>
@@ -14,8 +16,8 @@
         	 HTML5 Player should replace this.
         </div>
         <script type="text/javascript">
-            var player = new jwplayer.html5(document.getElementById("player"));
-            player.setup({
+            jwplayer("player").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
