--- a/fl5/js/test/examples/multiple_players.html
+++ b/fl5/js/test/examples/multiple_players.html
@@ -4,6 +4,8 @@
         <title>Multiple Video Example</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>Multiple players</h1>
@@ -22,8 +24,8 @@
         	HTML5 Player should replace this
         </div>
         <script type="text/javascript">
-            var player1 = new jwplayer.html5(document.getElementById("player1"));
-            player1.setup({
+            jwplayer("player1").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -32,8 +34,8 @@
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             
             });
-            var player2 = new jwplayer.html5(document.getElementById("player2"));
-            player2.setup({
+            jwplayer("player2").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
