--- a/fl5/js/test/examples/objectembed.html
+++ b/fl5/js/test/examples/objectembed.html
@@ -4,6 +4,8 @@
         <title>Object and Embed Tags</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
         </script>
+        <script type="text/javascript" src="settings.js">
+        </script>
     </head>
     <body>
         <h1>Object and Embed Tags</h1>
@@ -17,8 +19,8 @@
             <param name='movie' value='../../../fl5/player.swf'><param name='allowfullscreen' value='true'><param name='allowscriptaccess' value='always'><param name='wmode' value='transparent'><param name='flashvars' value='file=http://content.longtailvideo.com/videos/flvplayer.flv'>
         </object>
         <script type="text/javascript">
-            var player1 = new jwplayer.html5(document.getElementById("player1"));
-            player1.setup({
+            jwplayer("player1").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
@@ -32,8 +34,8 @@
         </p>
         <embed id='player2' name='player2' src='../../../fl5/player.swf' width='470' height='320' bgcolor='#000000' allowscriptaccess='always' allowfullscreen='true' flashvars='file=http://content.longtailvideo.com/videos/flvplayer.flv' />
         <script type="text/javascript">
-            var player2 = new jwplayer.html5(document.getElementById("player2"));
-            player2.setup({
+            jwplayer("player2").setup({
+            	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
             	}, {
