- Logo now mimics Flash Player [ticket:1081] - Updating examples
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1429 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/api.html
+++ b/fl5/js/test/examples/api.html
@@ -32,7 +32,8 @@
 			<a href="#" onclick="callPlayerFunction('properties');return false;">Get Value</a>
         </div>
         <script type="text/javascript">
-            jwplayer("player").setup({
+            var player = new jwplayer.html5(document.getElementById("player"));
+			player.setup({
             	players: settings.players,
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
