--- a/fl5/js/test/examples/load.html
+++ b/fl5/js/test/examples/load.html
@@ -59,7 +59,7 @@
             }];
 			
 			function load(item){
-				player.jwLoad(item);
+				jwplayer("player").load(item);
 			}
         </script>
         <a href="#" onclick="load('http://content.bitsontherun.com/videos/guYqV1AB-486405.mp4');return false;">File (mp4)</a>
