--- a/fl5/js/test/examples/multiple_customs.html
+++ b/fl5/js/test/examples/multiple_customs.html
@@ -59,7 +59,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-            	skin: "../../../../skins/stormtrooper/stormtrooper.xml"
+            	skin: "../../../../../skins/stormtrooper/stormtrooper.xml"
             });
         </script>
         <h3>HTML code</h3>
