--- a/fl5/js/test/examples/socialmedia.html
+++ b/fl5/js/test/examples/socialmedia.html
@@ -3,12 +3,12 @@
     <head>
         <title>Social Media</title>
         <script type="text/javascript" src="../../bin-debug/jwplayer.js">
-        <script type="text/javascript" src="settings.js">
-        <!--script type="text/javascript" src="http://developer.longtailvideo.com/trac/export/1410/trunk/js/bin-debug/jwplayer.js"-->
+        </script>
+		<script type="text/javascript" src="settings.js">
         </script>
     </head>
     <body>
-        <h1>Dojo Library</h1>
+        <h1>Social Media</h1>
         <p>
             This parses a &lt;video&gt; tag and sets up a player in it's place for IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
@@ -37,12 +37,6 @@
         <script type="text/javascript">
             jwplayer("player").setup({
             	players: settings.players,
-            	players: [{
-            		type: "html5"
-            	}, {
-            		type: "flash",
-            		src: "../../../fl5/player.swf"
-            	}],
             	plugins: {
             		hd: {
             			file: 'hd.mp4'
