- Adding netstreambasepath flashvar for page relative path reference [ticket:1066] - Fixing example titles
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1431 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/chromeless.html
+++ b/fl5/js/test/examples/chromeless.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Chromeless</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This is the basic setup for a video that plays natively on FF, Chrome, Safari, and Opera but will fail in IE.
         </p>
