--- a/fl5/js/test/examples/controlbar.html
+++ b/fl5/js/test/examples/controlbar.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Controlbar</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This shows all of the rendering options for the controlbar.
         </p>
