--- a/fl5/js/test/examples/custom_skin.html
+++ b/fl5/js/test/examples/custom_skin.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Custom Player Skin</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This sets up a player for each open source skin. The player will be setup with multiple sources, so it should play in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
