--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -33,7 +33,7 @@
 				"API": "api.html",
 				"Chromeless": "chromeless.html",
 				"Plugins": "plugins.html",
-				"Firefox bug": "load.html#",
+				"Firefox bug": "ffbug.html#",
 				"FLV failover": "failover.html",
 				"Dojo": "libraries/dojo.html",
 				"Ext Core": "libraries/ext-core.html",
@@ -46,7 +46,8 @@
 				"Social media": "socialmedia.html",
 				"Apple (Cupertino) Streaming": "m3u8.html",
 				"Loading HTML instead of a skin": "htmlskin.html",
-				"Extensions": "extensions.html"
+				"Extensions": "extensions.html",
+				"Netstream base path": "netstreambasepath.html"
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
