--- a/fl5/js/test/examples/listeners.html
+++ b/fl5/js/test/examples/listeners.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Listeners</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This tests adding listeners to the player and responding to events. Video should play on FF, Chrome, Safari, and Opera but will fail in IE.
         </p>
