--- a/fl5/js/test/examples/nodoctype.html
+++ b/fl5/js/test/examples/nodoctype.html
@@ -7,7 +7,9 @@
         </script>
     </head>
     <body>
-        <h1>No document type</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This page is meant to test how the player will render in browers when no DOCTYPE is specified. It is possible that things will look slightly different in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
