--- a/fl5/js/test/examples/nofile.html
+++ b/fl5/js/test/examples/nofile.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>No file path</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
 		 <p>
            This page tests to see the players behavior when it is provided with no file path. Hitting play should leave the player in it's original state.
         </p>
