--- a/fl5/js/test/examples/objectembed.html
+++ b/fl5/js/test/examples/objectembed.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Object and Embed Tags</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             In IE9, FF, Chrome, Safari, and Opera this will briefly display a Flash player (via an object or embed tag), but that should quickly disappear in favor of the HTML5 player. IE < 9 but will fail in IE.
         </p>
