--- a/fl5/js/test/examples/playlist.html
+++ b/fl5/js/test/examples/playlist.html
@@ -32,7 +32,9 @@
             	image: "http://content.bitsontherun.com/thumbs/DMJODX8R-480.jpg"
             }];
         </script>
-        <h1>Playlists</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This page is meant to test playlists with various playlist related config options. For now, all of them use the same playlist.
         </p>
