--- a/fl5/js/test/examples/resize.html
+++ b/fl5/js/test/examples/resize.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Resize</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
 		 <p>
            This page contains a player with multiple sources, so it should play back in IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
