--- a/fl5/js/test/examples/badskin.html
+++ b/fl5/js/test/examples/badskin.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Invalid skin path</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
 		 <p>
            This page tests to see the players behavior when it is provided with an invalid path for a skin.
         </p>
