--- a/fl5/js/test/examples/filepathsrelative.html
+++ b/fl5/js/test/examples/filepathsrelative.html
@@ -8,34 +8,29 @@
         </script>
     </head>
     <body>
-        <h1>Relative file paths</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This page sets up a players to test referencing files via a relative path. You should open Charles and confirm that you do not see any duplicate requests for resources, and that no resources have //, ./, or ../ in their path.
         </p>
         <p>
             It parses a &lt;video&gt; tag and sets up a player in it's place for IE9, FF, Chrome, Safari, and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
-		<h2>Relatively referenced</h2>
-		<p>
-			This references files based on an absoute path, vis-a-vis "/videos/video.mp4"
-		</p>
-		<video height="270" id="player" poster="../../../js/test/files/bunny.png" width="480">
-            <source src="../../../js/test/files/bunny.mp4" type="video/mp4" />
-			<source src="../../../js/test/files/bunny.ogv" type="video/ogg" />
-			<p>
-				HTML5 Player should replace this.
-			</p>
+        <h2>Relatively referenced</h2>
+        <p>
+            This references files based on an absoute path, vis-a-vis "/videos/video.mp4"
+        </p>
+        <video height="270" id="player" poster="../../../js/test/files/bunny.png" width="480">
+            <source src="../../../js/test/files/bunny.mp4" type="video/mp4" /><source src="../../../js/test/files/bunny.ogv" type="video/ogg" />
+            <p>
+                HTML5 Player should replace this.
+            </p>
         </video>
         <script type="text/javascript">
             setTimeout(function() {
             	jwplayer("player").setup({
-            	players: settings.players,
-            		players: [{
-            			type: "html5"
-            		}, {
-            			type: "flash",
-            			src: "../../../fl5/player.swf"
-            		}]
+            		players: settings.players
             	});
             }, 1000);
         </script>
