--- a/fl5/js/test/examples/plugins.html
+++ b/fl5/js/test/examples/plugins.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Plugins</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This test the various configuration options for plugins. Video should play natively on FF, Chrome, Safari, and Opera but will fail in IE.
         </p>
