--- a/fl5/js/test/examples/single_mp4.html
+++ b/fl5/js/test/examples/single_mp4.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Single MP4 video</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This sets up a player for IE9, FF, Chrome, Safari, and Opera, however, playback will fail in FF and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
