--- a/fl5/js/test/examples/single_ogg.html
+++ b/fl5/js/test/examples/single_ogg.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>Single OGG video</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This sets up a player for IE9, FF, Chrome, Safari, and Opera, however, playback will fail in Safari and IE. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
