--- a/fl5/js/test/examples/youtube.html
+++ b/fl5/js/test/examples/youtube.html
@@ -8,7 +8,9 @@
         </script>
     </head>
     <body>
-        <h1>YouTube</h1>
+        <script type="text/javascript">
+            document.write("<h1>" + document.title + "</h1>");
+        </script>
         <p>
             This sets up a YouTube player for IE9, FF, Chrome, Safari, and Opera, however, Flash must be enabled to view the video. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
