- Workaround for choppiness issues (by making wmode settable) [ticket:1116]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1432 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -47,7 +47,9 @@
 				"Apple (Cupertino) Streaming": "m3u8.html",
 				"Loading HTML instead of a skin": "htmlskin.html",
 				"Extensions": "extensions.html",
-				"Netstream base path": "netstreambasepath.html"
+				"Netstream base path": "netstreambasepath.html",
+				"Settable wmode": "wmode.html"
+				
 				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
