- Adding download fallback [ticket:1076] - Enhanced existing fallback mechanism - Code cleanup
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1435 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -48,7 +48,8 @@
 				"Loading HTML instead of a skin": "htmlskin.html",
 				"Extensions": "extensions.html",
 				"Netstream base path": "netstreambasepath.html",
-				"Settable wmode": "wmode.html"
+				"Settable wmode": "wmode.html",
+				"Download fallback": "downloadfallback.html"
 				
 				//"Event listeners": "listeners.html"
 			};
