- Cleaning up API for consistency - Adding API unit tester
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1445 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -31,6 +31,7 @@
 				"Logo": "logo.html",
 				"Load":"load.html",
 				"API": "api.html",
+				"Event listeners": "listeners.html",
 				"Chromeless": "chromeless.html",
 				"Plugins": "plugins.html",
 				"Firefox bug": "ffbug.html#",
@@ -49,9 +50,13 @@
 				"Extensions": "extensions.html",
 				"Netstream base path": "netstreambasepath.html",
 				"Settable wmode": "wmode.html",
-				"Download fallback": "downloadfallback.html"
+				"Download fallback": "downloadfallback.html",
+				"API Unit test: Events": "apiunittestevents.html",
+				"API Unit test: Play": "apiunittestplay.html",
+				"API Unit test: Pause": "apiunittestpause.html",
+				"API Unit test: Mute": "apiunittestmute.html",
+				"API Unit test: Fullscreen": "apiunittestfullscreen.html"
 				
-				//"Event listeners": "listeners.html"
 			};
 			for (var example in examples){
 				var listItem = document.createElement("li");
