--- a/fl5/js/test/examples/multiple_customs.html
+++ b/fl5/js/test/examples/multiple_customs.html
@@ -71,13 +71,13 @@
         <div height="270" id="player3" width="480">
             HTML5 Player should replace this
         </div>
-        <div style="background-color:black; width:50%; height:50%; position:absolute; display:block; ">
+        <!--div style="background-color:black; width:50%; height:50%; position:absolute; display:block; ">
             &nbsp;
-        </div>
+        </div-->
         <script type="text/javascript">
             jwplayer("player3").setup({
             	players: settings.players,
-            	height: "50%",
+            	height: "88%",
             	width: "50%",
             	levels: [{
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
